added stream