@@ -1,9 +1,7 @@
 package day1;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
-import java.util.stream.IntStream;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Main {
@@ -11,7 +9,8 @@ public class Main {
 		ListArray array = new ListArray();
 		int[] arr = array.initiliazeArray();
 		Stream<Integer> arr2 = Arrays.stream(arr).boxed();
-		System.out.println(arr2.sorted().toList());
+//		System.out.println(arr2.sorted().toList());
+		System.out.println(arr2.sorted().collect(Collectors.toList()));	
 	}
 
 }
